2011-12-15  Cesar Strauss  <cestrauss@gmail.com>

	* mingw32/mingw32-gcc4.xml: Remove the short-lived 4.6.1-1 release.

2011-11-27  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Correct versioning issue with msys-mksh contributed package.

	* msys/issue.log: Update for msys-mksh.

2011-11-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update msys-mksh contributed package.

	* msys/issue.log: Update for msys-mksh.

2011-11-17  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Adopt msys-mksh as a contributed package.

	* msys/msys-package-list.xml: Add msys-mksh.xml hook.
	* msys/issue.log: Update accordingly.

2011-11-16  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-rebase.

	* msys/msys-rebase.xml: Update to 4.0.1_1.
	* msys/issue.log: Update accordingly.

2011-11-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix source and licence package associations for GDB.

	* mingw32/mingw32-gdb.xml: Add generic source and licence package
	association declarations for all mingw32-gdb package components;
	remove release specific declarations where equivalent.
	* mingw32/issue.log: Update accordingly.

2011-11-08  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Correct dependencies for mingw32-gettext-dev, again.

	* mingw32/mingw32-gettext.xml: Also add libexpat dependency
	for -dev component. Remove unnecessary dependencies for
	gettext-dev 0.17-1.
	* mingw32/issue.log: Update accordingly.

2011-11-08  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Correct dependencies for mingw32-gettext-dev.

	* mingw32/mingw32-gettext.xml: Add libstdc++ and libgomp
	dependencies for -dev component. Modify all libgcc dependency
	specifications to include subsystem version wildcard.
	* mingw32/issue.log: Update accordingly.

2011-11-06  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-xz.

	* msys/msys-xz.xml: Update to xz-5.0.3-1.
	* msys/issue.log: Update accordingly.
