@@ -27,6 +27,7 @@
       <component class="lic">
         <release tarname="gcc-4.5.2-1-mingw32-lic.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-lic.tar.lzma" />
+        <release tarname="gcc-4.6.2-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="bin">
@@ -51,16 +52,29 @@
           <requires eq="libquadmath-%-mingw32-dll-0.tar" />
           <requires eq="pthreads-w32-*-mingw32-dev.tar" />
         </release>
+        <release tarname="gcc-core-4.6.2-1-mingw32-bin.tar.lzma">
+          <requires eq="binutils-*-mingw32-bin.tar" />
+          <requires eq="mingwrt-*-mingw32-dev.tar" />
+          <requires eq="w32api-*-mingw32-dev.tar" />
+          <requires eq="libgcc-%-mingw32-dll-1.tar" />
+          <requires eq="libssp-%-mingw32-dll-0.tar" />
+          <requires eq="libmpc-*-mingw32-dll-2.tar" />
+          <requires eq="libgomp-%-mingw32-dll-1.tar" />
+          <requires eq="libquadmath-%-mingw32-dll-0.tar" />
+          <requires eq="pthreads-w32-*-mingw32-dev.tar" />
+        </release>
       </component>
 
       <component class="doc">
         <release tarname="gcc-4.5.2-1-mingw32-doc.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-doc.tar.lzma" />
+        <release tarname="gcc-4.6.2-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lang">
         <release tarname="gcc-4.5.2-1-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-lang.tar.lzma" />
+        <release tarname="gcc-4.6.2-1-mingw32-lang.tar.lzma" />
       </component>
     </package>
 
@@ -89,10 +103,10 @@
       <component class="dll">
         <release tarname="libgcc-4.5.2-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgcc-4.6.1-2-mingw32-dll-1.tar.lzma" />
+        <release tarname="libgcc-4.6.2-1-mingw32-dll-1.tar.lzma" />
       </component>
     </package>
 
-    <!-- FIXME: no ADA package available at present...
     <package name="mingw32-gcc-ada" alias="gcc-ada ada">
       <affiliate group="MinGW Compiler Suite" />
       <description lang="en" title="The GNU Ada Compiler">
@@ -111,9 +125,14 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="bin">
-        <requires eq="gcc-core-%-mingw32-bin.tar" />
-        <requires eq="libgnat-%-mingw32-dll-4_5.tar" />
-        <release tarname="gcc-ada-4.5.2-1-mingw32-bin.tar.lzma" />
+        <release tarname="gcc-ada-4.5.2-1-mingw32-bin.tar.lzma">
+          <requires eq="gcc-core-%-mingw32-bin.tar" />
+          <requires eq="libgnat-%-mingw32-dll-4_5.tar" />
+        </release>
+        <release tarname="gcc-ada-4.6.2-1-mingw32-bin.tar.lzma">
+          <requires eq="gcc-core-%-mingw32-bin.tar" />
+          <requires eq="libgnat-%-mingw32-dll-4_6.tar" />
+        </release>
       </component>
     </package>
 
@@ -138,8 +157,9 @@
 
       <component class="dll">
         <release tarname="libgnat-4.5.2-1-mingw32-dll-4_5.tar.lzma" />
+        <release tarname="libgnat-4.6.2-1-mingw32-dll-4_6.tar.lzma" />
       </component>
-    </package> -->
+    </package>
 
     <package name="mingw32-gcc-g++" alias="gcc-g++ g++ gcc-c++ c++">
       <affiliate group="MinGW Compiler Suite" />
@@ -163,6 +183,7 @@
         <requires eq="libstdc++-%-mingw32-dll-6.tar" />
         <release tarname="gcc-c++-4.5.2-1-mingw32-bin.tar.lzma" />
         <release tarname="gcc-c++-4.6.1-2-mingw32-bin.tar.lzma" />
+        <release tarname="gcc-c++-4.6.2-1-mingw32-bin.tar.lzma" />
       </component>
     </package>
 
@@ -188,6 +209,7 @@
       <component class="dll">
         <release tarname="libstdc++-4.5.2-1-mingw32-dll-6.tar.lzma" />
         <release tarname="libstdc++-4.6.1-2-mingw32-dll-6.tar.lzma" />
+        <release tarname="libstdc++-4.6.2-1-mingw32-dll-6.tar.lzma" />
       </component>
     </package>
 
@@ -213,6 +235,7 @@
         <requires eq="libgfortran-%-mingw32-dll-3.tar" />
         <release tarname="gcc-fortran-4.5.2-1-mingw32-bin.tar.lzma" />
         <release tarname="gcc-fortran-4.6.1-2-mingw32-bin.tar.lzma" />
+        <release tarname="gcc-fortran-4.6.2-1-mingw32-bin.tar.lzma" />
       </component>
     </package>
 
@@ -238,6 +261,7 @@
       <component class="dll">
         <release tarname="libgfortran-4.5.2-1-mingw32-dll-3.tar.lzma" />
         <release tarname="libgfortran-4.6.1-2-mingw32-dll-3.tar.lzma" />
+        <release tarname="libgfortran-4.6.2-1-mingw32-dll-3.tar.lzma" />
       </component>
     </package>
 
@@ -290,6 +314,9 @@
         <release tarname="gcc-objc-4.6.1-2-mingw32-bin.tar.lzma">
           <requires eq="libobjc-%-mingw32-dll-3.tar" />
         </release>
+        <release tarname="gcc-objc-4.6.2-1-mingw32-bin.tar.lzma">
+          <requires eq="libobjc-%-mingw32-dll-3.tar" />
+        </release>
       </component>
     </package>
 
@@ -315,6 +342,7 @@
       <component class="dll">
         <release tarname="libobjc-4.5.2-1-mingw32-dll-2.tar.lzma" />
         <release tarname="libobjc-4.6.1-2-mingw32-dll-3.tar.lzma" />
+        <release tarname="libobjc-4.6.2-1-mingw32-dll-3.tar.lzma" />
       </component>
     </package>
 
@@ -328,6 +356,7 @@
         <requires eq="libpthread-*-mingw32-dll-2.tar" />
         <release tarname="libgomp-4.5.2-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgomp-4.6.1-2-mingw32-dll-1.tar.lzma" />
+        <release tarname="libgomp-4.6.2-1-mingw32-dll-1.tar.lzma" />
       </component>
     </package>
 
@@ -340,6 +369,7 @@
       <component class="dll">
         <release tarname="libssp-4.5.2-1-mingw32-dll-0.tar.lzma" />
         <release tarname="libssp-4.6.1-2-mingw32-dll-0.tar.lzma" />
+        <release tarname="libssp-4.6.2-1-mingw32-dll-0.tar.lzma" />
       </component>
     </package>
 
@@ -351,6 +381,7 @@
 
       <component class="dll">
         <release tarname="libquadmath-4.6.1-2-mingw32-dll-0.tar.lzma" />
+        <release tarname="libquadmath-4.6.2-1-mingw32-dll-0.tar.lzma" />
       </component>
     </package>
 
