@@ -1,3 +1,10 @@
+2011-12-21  Cesar Strauss  <cestrauss@gmail.com>
+
+	Update & publish mingw32-gcc4.
+
+	* mingw32/mingw32-gcc4.xml: Update to 4.6.2-1.
+	* mingw32/issue.log: Updated accordingly.
+
 2011-12-15  Cesar Strauss  <cestrauss@gmail.com>
 
 	* mingw32/mingw32-gcc4.xml: Remove the short-lived 4.6.1-1 release.
